[package]
name = "toda"
version = "0.2.4"
authors = ["Yang Keao <keao.yang@yahoo.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
nix = { version = "0.29", features = ["process", "ptrace", "uio", "mman", "fs", "signal", "mount", "dir", "user"] }
anyhow = "1.0"
fuser = {version = "0.16", features = ["abi-7-19"]}
libc = "0.2"
async-trait = "0.1"
tokio = {version = "1", features = ["rt", "rt-multi-thread", "sync", "fs", "time", "macros"]}
tokio-util = "0.7"
thiserror = "1.0"
futures = "0.3"
derive_more = "0.99.9"
glob = "0.3"
bitflags = "2"
rand = "0.8"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
humantime-serde = "1.0"
slab = "0.4"
once_cell = "1.4"
dynasmrt = "2.0.0"
procfs = "0.16"
itertools = "0.13"
env_logger = "0.11"
retry = "1.2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
jsonrpc-stdio-server = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"

[profile.release]
debug = true
